spotweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotweb
spec:
  selector:
    matchLabels:
      app: spotweb
      release: spotweb
  template:
    metadata:
      labels:
        app: spotweb
        release: spotweb
    spec:
      volumes:
      - name: spotweb-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/spotweb-config # < pvc name we created in the previous yaml

      containers:
      - image: jerheij/spotweb:latest
        imagePullPolicy: Always
        name: spotweb
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/spotweb
          name: spotweb-config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
