spotweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotweb-service    # < name of the service
  namespace: spotweb # < namespace where place the deployment and pods
spec:
  selector:
    app: spotweb # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 80
